@@ -3,20 +3,15 @@ package com.cloudstorage.config;
 import com.cloudstorage.model.User;
 import com.cloudstorage.repository.UserRepository;
 import com.cloudstorage.service.JWTService;
-
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
-
 import org.springframework.stereotype.Component;
-
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
@@ -37,68 +32,6 @@ public class JWTFilter extends OncePerRequestFilter {
         this.userRepository = userRepository;
     }
 
-
-    // =====================================================
-    // SKIP JWT FILTER FOR PUBLIC ENDPOINTS
-    // =====================================================
-
-    @Override
-    protected boolean shouldNotFilter(
-            HttpServletRequest request
-    ) {
-
-        String path = request.getServletPath();
-
-        // Swagger / OpenAPI
-        if (path.startsWith("/v3/api-docs")) {
-            return true;
-        }
-
-        if (path.startsWith("/swagger-ui")) {
-            return true;
-        }
-
-        if (path.startsWith("/swagger-resources")) {
-            return true;
-        }
-
-        if (path.startsWith("/webjars")) {
-            return true;
-        }
-
-        if (path.equals("/swagger-ui.html")) {
-            return true;
-        }
-
-        // Register / Login
-        if (path.startsWith(
-                "/api/v1/users/api/auth"
-        )) {
-            return true;
-        }
-
-        // Google OAuth2
-        if (path.startsWith("/oauth2")) {
-            return true;
-        }
-
-        if (path.startsWith("/login/oauth2")) {
-            return true;
-        }
-
-        // Public links
-        if (path.startsWith("/api/public-links")) {
-            return true;
-        }
-
-        return false;
-    }
-
-
-    // =====================================================
-    // JWT FILTER
-    // =====================================================
-
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
@@ -109,48 +42,35 @@ public class JWTFilter extends OncePerRequestFilter {
         String authorization =
                 request.getHeader("Authorization");
 
-
-        // =================================================
-        // NO AUTHORIZATION HEADER
-        // =================================================
+        // ==========================================
+        // NO TOKEN
+        // ==========================================
 
         if (authorization == null
                 || !authorization.startsWith("Bearer ")) {
 
-            filterChain.doFilter(
-                    request,
-                    response
-            );
-
+            filterChain.doFilter(request, response);
             return;
         }
-
-
-        // =================================================
-        // GET TOKEN
-        // =================================================
 
         String token =
                 authorization.substring(7).trim();
 
+        // ==========================================
+        // CHECK EMPTY TOKEN
+        // ==========================================
 
-        // Empty token
         if (token.isEmpty()) {
 
-            filterChain.doFilter(
-                    request,
-                    response
-            );
-
+            filterChain.doFilter(request, response);
             return;
         }
 
-
         try {
 
-            // =================================================
+            // ==========================================
             // GET EMAIL FROM JWT
-            // =================================================
+            // ==========================================
 
             String email =
                     jwtService.getEmail(token);
@@ -159,140 +79,140 @@ public class JWTFilter extends OncePerRequestFilter {
                     "JWT EMAIL = " + email
             );
 
-
-            // =================================================
+            // ==========================================
             // CHECK EMAIL
-            // =================================================
+            // ==========================================
 
-            if (email == null
-                    || email.trim().isEmpty()) {
+            if (email == null || email.isBlank()) {
 
-                response.setStatus(
-                        HttpServletResponse.SC_UNAUTHORIZED
+                System.out.println(
+                        "JWT ERROR = Email claim is empty"
                 );
 
+                filterChain.doFilter(request, response);
                 return;
             }
 
-
-            // =================================================
+            // ==========================================
             // FIND USER
-            // =================================================
+            // ==========================================
 
             Optional<User> optionalUser =
                     userRepository.findByEmail(email);
 
-
             if (optionalUser.isEmpty()) {
 
                 System.out.println(
-                        "USER NOT FOUND = " + email
+                        "JWT ERROR = User not found: "
+                                + email
                 );
 
-                response.setStatus(
-                        HttpServletResponse.SC_UNAUTHORIZED
-                );
-
+                filterChain.doFilter(request, response);
                 return;
             }
-
-
-            // =================================================
-            // GET USER
-            // =================================================
 
             User user =
                     optionalUser.get();
 
+            System.out.println(
+                    "USER FOUND = " + user.getEmail()
+            );
 
-            // =================================================
-            // GET ROLE
-            // =================================================
+            // ==========================================
+            // ROLE
+            // ==========================================
 
             String role =
-                    user.getRole().name();
+                    user.getRole() != null
+                            ? user.getRole().name()
+                            : "USER";
 
             System.out.println(
                     "USER ROLE = " + role
             );
 
-
-            // =================================================
-            // CREATE AUTHORITY
-            // =================================================
+            // ==========================================
+            // AUTHORITY
+            // ==========================================
 
             SimpleGrantedAuthority authority =
                     new SimpleGrantedAuthority(
                             "ROLE_" + role
                     );
 
-
-            // =================================================
-            // CREATE AUTHENTICATION
-            // =================================================
+            // ==========================================
+            // AUTHENTICATION
+            // ==========================================
 
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(
                             user,
                             null,
-                            Collections.singletonList(
-                                    authority
-                            )
+                            Collections.singletonList(authority)
                     );
-
-
-            // =================================================
-            // ADD REQUEST DETAILS
-            // =================================================
 
             authentication.setDetails(
                     new WebAuthenticationDetailsSource()
                             .buildDetails(request)
             );
 
-
-            // =================================================
-            // SET SECURITY CONTEXT
-            // =================================================
+            // ==========================================
+            // SECURITY CONTEXT
+            // ==========================================
 
             SecurityContextHolder
                     .getContext()
-                    .setAuthentication(
-                            authentication
-                    );
-
+                    .setAuthentication(authentication);
 
             System.out.println(
-                    "AUTHENTICATION SET = "
-                            + authentication
+                    "AUTHENTICATION SUCCESS = "
+                            + user.getEmail()
             );
 
         } catch (Exception e) {
 
+            // ==========================================
+            // JWT ERROR
+            // ==========================================
+
             System.out.println(
-                    "JWT ERROR = "
+                    "================================="
+            );
+
+            System.out.println(
+                    "JWT VALIDATION FAILED"
+            );
+
+            System.out.println(
+                    "ERROR TYPE = "
+                            + e.getClass().getName()
+            );
+
+            System.out.println(
+                    "ERROR MESSAGE = "
                             + e.getMessage()
             );
 
-            response.setStatus(
-                    HttpServletResponse.SC_UNAUTHORIZED
+            e.printStackTrace();
+
+            System.out.println(
+                    "================================="
             );
 
-            response.setContentType(
-                    "application/json"
-            );
+            SecurityContextHolder
+                    .clearContext();
 
-            response.getWriter().write(
-                    "{\"error\":\"Invalid or expired token\"}"
+            filterChain.doFilter(
+                    request,
+                    response
             );
 
             return;
         }
 
-
-        // =================================================
-        // CONTINUE REQUEST
-        // =================================================
+        // ==========================================
+        // CONTINUE
+        // ==========================================
 
         filterChain.doFilter(
                 request,
